-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.4.0
-
None
-
Windows 7
-
24edd8afdc936b0a73095e4f735a466653558a1e (5.4, 2.10.2014, 5.4 RC)
Attached screens to show the problem.
It seems the first region ignores the devicePixelRatio setting, but I have seen all sorts of other funny results.
Note however, that if the region is set to a painter it works as expected!
The problem is only using the region as a mask for a window.
- is required for
-
QTBUG-38858 Improve UI Scalability (Meta Bug)
-
- Closed
-
For Gerrit Dashboard: QTBUG-41300 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
96173,2 | Windows: Transform regions of window masks correctly. | 5.4 | qt/qtbase | Status: MERGED | +2 | 0 |