Windows: Transform regions of window masks correctly.

Add missing transformation for first rectangle of a region
consisting of multiple rectangles.

Task-number: QTBUG-41300
Change-Id: I1a25c422c93ceade79de79d5c49891e0a7211943
Reviewed-by: MihailNaydenov <garfieldhq@yahoo.com>
Reviewed-by: Alessandro Portale <alessandro.portale@digia.com>

cregit: 24edd8afdc936b0a73095e4f735a466653558a1e https://github.com/qt/qtbase/commit/24edd8afdc936b0a73095e4f735a466653558a1e